ingress2.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: camunda
  annotations:
    #certmanager.k8s.io/cluster-issuer: "letsencrypt-prod-cluster"
    kubernetes.io/ingress.class: "nginx"
    #kubernetes.io/tls-acme: "true"
spec:
  rules:
    - host: camunda.ticaret.gov.tr
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: camunda
                port:
                  number: 80

#tls:
#    - hosts:
#      - camunda.192.168.10.127.nip.io
#      secretName: camunda-tls
